add ability to submit custom tasks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,8 @@ header p {
   font-size: 2rem;
 }
 
-p, li {
+p,
+li {
   font-size: 1.6rem;
 }
 
@@ -227,4 +228,5 @@ footer {
   .task-list-wrapper {
     flex-basis: 100%;
   }
+
 }
